[gd_scene load_steps=4 format=2]

[ext_resource path="res://Home.tscn" type="PackedScene" id=1]
[ext_resource path="res://ScreenTransition.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Top" type="Node2D" parent="."]

[node name="Level" parent="." instance=ExtResource( 1 )]

[node name="ScreenTransition" parent="." instance=ExtResource( 2 )]
z_index = 99
[connection signal="level_change_complete" from="." to="ScreenTransition" method="_on_Game_level_change_complete"]
[connection signal="go_to_map" from="Level" to="." method="_on_Level_go_to_map"]
[connection signal="fade_out_finished" from="ScreenTransition" to="." method="_on_ScreenTransition_fade_out_finished"]
